# uppercut

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md
.claude/: launch.json
.github/workflows/: ci.yml
docs/: architecture.md  asset-pack.md  command-api.md  mcp-agent-guide.md  plugin-api.md  project-schema.md
examples/packs/starter/: pack.json
examples/packs/starter/luts/: punch.cube
examples/plugins/gain/: _gen.rs  gain.wasm  plugin.json
examples/plugins/invert/: invert.rs  invert.wasm  plugin.json
examples/registry/: README.md  index.json
uppercut-app/: index.html  package-lock.json  package.json
uppercut-app/src/: App.tsx  main.tsx
uppercut-app/src-tauri/: Cargo.toml  tauri.conf.json
uppercut-app/src-tauri/capabilities/: default.json
uppercut-app/src-tauri/src/: lib.rs  main.rs  media_assets.rs
uppercut-app/src-tauri/src/preview/: gfx.rs  linux.rs  macos.rs  mod.rs  win32.rs
uppercut-app/src-tauri/src/preview/linux/: mod.rs  wayland.rs  x11.rs
uppercut-app/src/components/: CaptionStyleGallery.tsx  ContextMenu.tsx  TopBar.tsx  WelcomeScreen.tsx
uppercut-app/src/components/dialogs/: ExportDialog.tsx
uppercut-app/src/components/inspector/: CaptionInspector.tsx  KeyframeEditor.tsx  MediaClipInspector.tsx  ProjectInspector.tsx
uppercut-app/src/components/leftpanel/: AdjustPanel.tsx  AudioPanel.tsx  ComingSoonPanel.tsx  EffectsPanel.tsx  ExtensionsPanel.tsx  FiltersPanel.tsx  LeftPanel.tsx  MediaPanel.tsx  StickersPanel.tsx  TextPanel.tsx  TransitionsPanel.tsx
uppercut-app/src/components/preview/: PreviewPanel.tsx  RatioMenu.tsx  TransportBar.tsx
uppercut-app/src/components/timeline/: AddTrackMenu.tsx  TimelineCanvas.tsx  TimelineToolbar.tsx  TrackHeaders.tsx
uppercut-app/src/components/ui/: IconButton.tsx  MenuSelect.tsx  Tooltip.tsx  WindowControls.tsx
uppercut-app/src/lib/: commands.ts  format.ts  ipc.ts  projectFlows.ts  types.ts
uppercut-app/src/store/: editorStore.ts
uppercut-app/src/styles/: globals.css  tokens.css
uppercut-app/src/timeline/: interactions.ts  layout.ts  renderer.ts
uppercut-cli/: Cargo.toml
uppercut-cli/src/: main.rs
uppercut-core/: Cargo.toml
uppercut-core/examples/: write_gain_wasm.rs  write_invert_wasm.rs
uppercut-core/src/: lib.rs
uppercut-core/src/captions/: mod.rs
uppercut-core/src/commands/: mod.rs
uppercut-core/src/compose/: composite.wgsl  mod.rs  transition.rs  transition.wgsl
uppercut-core/src/compose/effects/: glitch.wgsl  mod.rs
uppercut-core/src/export/: mod.rs
uppercut-core/src/media/: ffmpeg_cli.rs  mod.rs
uppercut-core/src/packs/: mod.rs
uppercut-core/src/perceive/: analysis.rs  mod.rs
uppercut-core/src/plugins/: mod.rs
uppercut-core/src/project/: anim.rs  mod.rs
uppercut-mcp/: Cargo.toml
uppercut-mcp/src/: main.rs
