[workspace]
resolver = "2"
members = [
    "uppercut-core",
    "uppercut-cli",
    "uppercut-mcp",
    "uppercut-app/src-tauri",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/uppercut-editor/uppercut"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

uppercut-core = { path = "uppercut-core" }
