[package]
name = "uppercut-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Uppercut: the simplest agent-drivable surface over uppercut-core's command API. See docs/command-api.md."

[[bin]]
name = "uppercut"
path = "src/main.rs"

[dependencies]
uppercut-core.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
uuid.workspace = true
