[package]
name = "uppercut-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri 2 desktop app for Uppercut — Phase 2 GUI MVP."

[lib]
name = "uppercut_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uppercut-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
uppercut-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
parking_lot = "0.12.5"
wgpu = "30.0.0"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
rodio = { version = "0.21", default-features = false, features = ["playback", "wav"] }

[target.'cfg(any(windows, target_os = "macos", target_os = "linux"))'.dependencies]
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xfixes"] }
wayland-client = { version = "0.31", features = ["system"] }
wayland-backend = { version = "0.3", features = ["client_system"] }
